--- a/src/Components/nav.css
+++ b/src/Components/nav.css
@@ -1,13 +1,12 @@
 .navbar {
     background-color: #ffffff;
-    color: #ffffff;
+    color: #000000;
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
     font-weight: 500;
-    padding: 0.5rem 1rem;
     position: fixed;
     top: 0;
-    width: 93%;
+    width: 100%;
     z-index: 1;
     display: flex;
     justify-content: space-between;
@@ -26,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color:#000000;
 }
 
 .navbar_links a {
@@ -35,7 +35,7 @@
     font-weight: 500;
 }
 
-.loginbutton {
+.loginbutton a {
     color: #6A4BFF;
 }
 
