--- a/src/Booking/Booking.css
+++ b/src/Booking/Booking.css
@@ -7,3 +7,68 @@
     height: 100%;
     border-radius: 10px;
 }
+
+/* Add this CSS to your stylesheet */
+
+.top-destination {
+    margin-top: 50px;
+    padding: 200px;
+}
+
+.top-destination h1 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    color: #333;
+}
+.top-destination-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(31%, 1fr));
+    gap: 20px;
+    height: 500px;
+    width: 100%;
+}
+
+.top-destination-card {
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    border-radius: 8px;
+    overflow: hidden;
+    width: 100%;
+
+}
+
+.top-destination-card img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-bottom: 1px solid #ddd;
+}
+
+.top-destination-card-info {
+    padding: 15px;
+}
+
+.top-destination-card-info h2 {
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.top-destination-card-info h3 {
+    font-size: 16px;   
+    color: #8566FF;
+    float: right;
+}
+
+.top-destination-card-info h4 {
+    font-size: 14px;
+    color: #555;
+}
+
+.line {
+    display: flex;
+    flex-direction: row;
+}
+
