--- a/src/Booking/Booking.css
+++ b/src/Booking/Booking.css
@@ -71,4 +71,137 @@
     display: flex;
     flex-direction: row;
 }
+/* Add this CSS to your stylesheet */
 
+.search-component {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.search-top {
+    margin-top: -100px;
+    margin-bottom: -10px;
+    border: 0px solid #ddd;
+    border-radius: 4px;
+    z-index: 0;
+    background-color: #ffffff;
+    width: 40%;
+    padding: 20px;
+    font-size: 14px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    font-weight: 200;
+    color:rgba(0, 0, 0, 0.712);
+    
+}
+
+.holder {
+    width: 80%;
+}
+
+.search-bottom {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    font-weight: 200;
+    color:rgba(0, 0, 0, 0.712);
+    z-index: 2;
+}
+
+.search-bottom > div {
+    flex: 1;
+    margin-right: 10px;
+}
+
+.search-button img {
+    width: 30px;
+    height: 30px;
+}
+
+.search-bottom input,
+.select {
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.select {
+    width: 100%;
+    max-width: 200px;
+}
+
+.search-bottom button {
+    float: right;
+    background-color: #ffffff;
+    border: 0px solid #ddd;
+}
+
+@media screen and (max-width: 768px) {
+    .search-bottom > div {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+}
+
+.date-container {
+    display: flex;
+}
+
+.date-range {
+    margin-right: 20px;
+}
+
+.date-range input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.search-bottom h2 {
+    font-size: 13px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.location {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.people {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.time {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.date {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
