--- a/src/Checkout/Checkout.css
+++ b/src/Checkout/Checkout.css
@@ -19,6 +19,7 @@
     color: #555;
     margin-bottom: 14px;
     text-align: left;
+    justify-content: left;
 }
 .Checkout-Items {
 
@@ -50,6 +51,9 @@
     padding: 15px;
     display: flex;
     flex-direction: row; /* Align details in two columns */
+    text-align: left;
+    justify-content: left;
+    align-items: left;
 }
 
 .Checkout-Item-Details h2 {
@@ -77,7 +81,8 @@
 .entryfee {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: left;
+    justify-content: left;
 }
 
 .date img,
@@ -91,8 +96,8 @@
     width: 20px;
     height: 20px;
     margin-right: 5px;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
 }
 
 
