--- a/src/Booking/Hero.css
+++ b/src/Booking/Hero.css
@@ -26,3 +26,38 @@
     margin-bottom: 0px;
     letter-spacing: 3px;
 }
+
+@media screen and (max-width: 600px) {
+    .hero {
+        margin-top: 100px;
+        background-image: url('../../public/Booking_img.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 70vh;
+    }
+
+    .hero .hero__text {
+        display: flex;
+        flex-direction: column;
+        padding: 100px;
+        color: white;
+    }
+
+    .hero .hero__text h1 {
+        font-size: 2rem;
+        font-weight: 500;
+        margin-bottom: 20px;
+    }
+
+    .hero .hero__text p {
+        font-size: 1rem;
+        font-weight: 400;
+        margin-bottom: 0px;
+        letter-spacing: 3px;
+    }
+
+
+
+
+}
