--- a/src/Checkout/Checkout.css
+++ b/src/Checkout/Checkout.css
@@ -260,3 +260,72 @@
     color: #777;
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    .Checkout-main {
+        margin-top: 100px;
+        padding: 50px;
+    }
+
+    .Checkout-Item-Image img {
+        border-radius: 8px 8px 0 0; /* Round all corners */
+        width: 80%;
+        height: auto;
+    }
+
+    .Checkout-Item {
+        flex-direction: column;
+    }
+
+    .Checkout-Item-Details {
+        padding: 15px;
+        display: flex;
+        flex-direction: column; /* Align details in two columns */
+        text-align: left;
+        justify-content: left;
+        align-items: left;
+    }
+
+    .Checkout-Item-Details h2 {
+        font-size: 10px;
+        margin-bottom: 5px;
+    }
+
+    .Checkout-Item-Details p {
+        font-size: 13px;
+        color: #555;
+        margin-bottom: 14px;
+    }
+
+    .column {
+        flex: 1; /* Equal width for both columns */
+    }
+
+    .date,
+    .time,
+    .groups,
+    .transportation,
+    .duration,
+    .guide,
+    .language,
+    .entryfee {
+        display: flex;
+        flex-direction: row;
+        align-items: left;
+        justify-content: left;
+    }
+
+
+    .payment-modal {
+        padding: 20px;
+    }
+    .payment-modal h1 {
+        font-size: 20px;
+    }
+    .form-row {
+        flex-direction: column;
+    }
+    .form-row div {
+        margin-right: 0;
+    }
+}
