--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -4,6 +4,10 @@
     padding-bottom: 10px;
     padding-top: 10px;
     box-shadow: 0px 0px 20px 0px #e1e1e1;
+    width: 100%;
+    background-color: #ffffff;
+    padding: 0%;
+    
 }
 
 .footer .footer_top {
@@ -12,7 +16,7 @@
     padding: 60px;
 }
 
-.footer .footer_top .footer_top_right{
+.footer .footer_top .footer_top_right {
     padding-left: 200px;
     width: 100%;
     display: flex;
@@ -20,22 +24,10 @@
     justify-content: space-between;
 }
 
-.footer_top_right_1 ul{
-    list-style-type: none !important;
-    margin-left: -40px;
-}
-
-.footer_top_right_2 ul{
-    list-style-type: none !important;
-    margin-left: -40px;
-}
-
-.footer_top_right_3 ul{
-    list-style-type: none !important;
-    margin-left: -40px;
-}
-
-.footer_top_right_4 ul{
+.footer_top_right_1 ul,
+.footer_top_right_2 ul,
+.footer_top_right_3 ul,
+.footer_top_right_4 ul {
     list-style-type: none !important;
     margin-left: -40px;
 }
@@ -75,52 +67,34 @@
     color: #3f53ec;
     text-decoration: underline;
 }
-
-
-@media screen and (max-width: 1408px) {
+@media screen and (max-width: 600px) {
     .footer {
-        padding: 20px;
+        padding: 0px;
+        width: 100%;
+
     }
 
     .footer .footer_top {
         flex-direction: column;
-        padding: 20px;
+        padding: 10px;
     }
 
     .footer .footer_top .footer_top_right {
-        padding-left: 0px;
+        padding-left: 0;
         padding-top: 20px;
-    }
-
-    .footer_top_right_1 ul{
-        margin-left: 0px;
-    }
-
-    .footer_top_right_2 ul{
-        margin-left: 0px;
-    }
-
-    .footer_top_right_3 ul{
-        margin-left: 0px;
-    }
-
-    .footer_top_right_4 ul{
-        margin-left: 0px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: center;
     }
 
     .footer_bottom {
         flex-direction: column;
-        padding: 20px;
-    }
-
-    .footer_bottom .footer_bottom_right ul {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        padding: 10px;
     }
 
     .footer_bottom .footer_bottom_right ul li {
-        margin-right: 0px;
         margin-bottom: 10px;
     }
 }
