--- a/src/Components/nav.css
+++ b/src/Components/nav.css
@@ -56,3 +56,54 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
     padding: 10px 15px;
 }
+
+@media only screen and (max-width: 600px) {
+    .navbar{
+        width: 100%;
+    }
+    .navbar_links {
+        display: none; /* Initially hide the links in mobile */
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        position: absolute;
+        top: 80px; /* Adjust the top position as needed */
+        left: 0;
+        background-color: #ffffff;
+        z-index: 2;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .navbar_links.show {
+        display: flex; /* Show the links when the menu is active */
+    }
+
+    .mobile_menu_icon {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+        margin-right: 50px;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #000;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+
+    .change.bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-5px, 6px);
+    }
+
+    .change.bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .change.bar:nth-child(3) {
+        transform: rotate(45deg) translate(-5px, -6px);
+    }
+}
