--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,16 +3,14 @@
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: space-between;
     align-items: center;
-    
-    
+    padding: 0%;
+    margin: 0%;
 }
 
 .home_main .left_home .tagline {
     display: flex;
     text-align: center;
-
 }
 
 .home_main .left_home .tagline h1 {
@@ -92,5 +90,51 @@
 .home_main .home_img img {
     width: 100%;
     height: 100%;
+}
 
+@media screen and (max-width:600px) {
+    .home {
+        flex-direction: column;
+        padding: 0px;
+        margin: 0px;
+    }
+    .home_main {
+        flex-direction: column;
+        width: 80%;
+        padding: 0px;
+        margin: 0px;
+        margin-top: 130px;
+        margin-left: 20px;
+    }
+
+    .home_main .left_home {
+        margin: 0px;
+        width: 100%;
+        margin: 20px;
+        
+    }
+
+
+    .home_main .home_img img {
+        width: 330px;
+        height: 300px;
+
+    }
+
+    .home_main .home_text {
+        width: 100%;
+    }
+
+    .home_main .home_text1 {
+        font-size: 30px;
+    }
+
+    .home_main .desc {
+        font-size: 15px;
+    }
+
+    .home_main .home_button {
+        padding: 10px 30px;
+        font-size: 12px;
+    }
 }
