--- a/src/Home/HomePlan.css
+++ b/src/Home/HomePlan.css
@@ -92,3 +92,106 @@
 .home_plan_img_container_item_text {
     margin-left: 0px;
 }
+
+@media screen and (max-width: 600px) {
+    .home_plan_main {
+        padding: 10px;
+    }
+
+    .home_plan {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    
+    }
+
+    .home_plan_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content:left;
+    }
+    
+    .home_plan h3{
+        font-size: 30px;
+        margin-bottom: 0px;
+    }
+    
+    .home_plan .subtitle {
+        color: #706f6f;
+        margin-bottom: 0px;
+    }
+    
+    .home_plan .home_plan_text {
+        padding: 20px;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        width: 100%;
+        
+    }
+    
+    
+    .home_plan_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    
+    }
+    
+    .home_plan_container_item {
+    
+        height: 120px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-bottom: 20px;
+        border: 0px solid #d1d0d0;
+        box-shadow: 0px 0px 20px 0px #e1e1e1;
+        border-radius: 10px;
+        cursor: pointer;
+        padding: 10px;
+    
+    }
+    
+    .home_plan_container_item img {
+        
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-left: 15px;
+    }
+    
+    .home_plan_container_item .location {
+        margin-left: 20px;
+        font-size: 15px;
+        color: #2e2e2e;
+        font-weight: 600;
+    }
+    
+    .home_plan_container_item ul {
+        display: flex;
+        flex-direction: row;
+        font-size: 12px;
+        margin-left: -20px;
+    }
+    
+    .home_plan_container_item ul li {
+        color: #706f6f;
+        margin-right: 25px;
+       
+    }
+    
+    .home_plan_container_item ul li:first-child {
+        margin-left: 0px;
+        list-style: none;
+    }
+    
+    .home_plan_img_container_item_text {
+        margin-left: 0px;
+    }
+}
