--- a/src/Login/Signin.css
+++ b/src/Login/Signin.css
@@ -1,3 +1,4 @@
+
 .login {
     display: flex;
     flex-direction: row;
@@ -103,4 +104,84 @@
     border-radius: 20px;
     transition: all 0.3s ease-in-out;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 600px) {
+
+    .login {
+        flex-direction: column;
+        padding: 0px;
+        margin: 0px;
+    }
+    .login .login_form {
+        padding: 20px;
+        margin: 0px;
+
+    }
+    .login .login_form h2 {
+        font-size: 20px;
+        margin-top: 20px;
+        margin-bottom: 0px;
+    }
+    .login_form .subtitle {
+        font-size: 14px;
+        margin-bottom: 20px;
+    }
+    .login .login_form input {
+        margin-bottom: 10px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 14px;
+        width: 80%;
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+    }
+    .login .login_form button {
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 10px 20%;
+        border: 1px solid #ccc;
+        border-radius: 50px;
+        font-size: 14px;
+        background-color: #8566FF;
+        color: #fff;
+        cursor: pointer;
+        display: block; /* Ensure it takes up the full width */
+    }
+    .login .login_form button:hover {
+        background-color: #6A4BFF;
+    }
+    .donthave {
+        margin-top: 20px;
+        font-size: 12px;
+        color: #918f8f;
+        text-align: center;
+    }
+    .forgotpass {
+        margin-top: 20px;
+        font-size: 12px;
+        color: #8566FF;
+        cursor: pointer;
+        display: flex;
+        justify-content: flex-start;
+
+    }
+    .login .login_image {
+        display: none;
+    }
+    .login .login_form .logo {
+        width: 150px;
+        height: 30px;
+    }
+    .login .login_form button {
+        padding: 10px 20%;
+    }
+    .login .login_form_social_icons img {
+        padding: 10px 20px;
+    }
+
+    
+
+
 }
