--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,5 +1,8 @@
+.home {
+    margin-top: 90px;
+}
 .home_main {
-    margin-top: 130px;
+    
     display: flex;
     width: 100%;
     height: 100%;
