--- a/src/Components/Try2.css
+++ b/src/Components/Try2.css
@@ -2,3 +2,67 @@
     margin-top: 120px;
 
 }
+
+.spinner-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    /* semi-transparent white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensure it's above other elements */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3;
+    /* Light grey */
+    border-top: 8px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+.search-form {
+    width: 400px;
+}
+
+
+.dayplan-container .dayplans {
+    display: flex;
+    flex-direction: row;
+}
+
+.dayplan-container .dayplans .dayplan {
+    width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+    .search-form {
+        width: 100%;
+    }
+
+    .dayplan-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .dayplan-container .dayplans {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .dayplan-container .dayplans .dayplan {
+        width: 90%;
+    }
+
+}
