--- a/src/Login/Signin.css
+++ b/src/Login/Signin.css
@@ -1,3 +1,28 @@
+.spinner-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    /* semi-transparent white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    /* Ensure it's above other elements */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3;
+    /* Light grey */
+    border-top: 8px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
 
 .login {
     display: flex;
@@ -13,7 +38,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    
+
 }
 
 .login .login_form h2 {
@@ -53,7 +78,8 @@
     background-color: #8566FF;
     color: #fff;
     cursor: pointer;
-    display: block; /* Ensure it takes up the full width */
+    display: block;
+    /* Ensure it takes up the full width */
 }
 
 .login .login_form button:hover {
@@ -113,20 +139,24 @@
         padding: 0px;
         margin: 0px;
     }
+
     .login .login_form {
         padding: 20px;
         margin: 0px;
 
     }
+
     .login .login_form h2 {
         font-size: 20px;
         margin-top: 20px;
         margin-bottom: 0px;
     }
+
     .login_form .subtitle {
         font-size: 14px;
         margin-bottom: 20px;
     }
+
     .login .login_form input {
         margin-bottom: 10px;
         padding: 10px;
@@ -136,6 +166,7 @@
         width: 80%;
         box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
     }
+
     .login .login_form button {
         margin-top: 20px;
         margin-left: auto;
@@ -147,17 +178,21 @@
         background-color: #8566FF;
         color: #fff;
         cursor: pointer;
-        display: block; /* Ensure it takes up the full width */
+        display: block;
+        /* Ensure it takes up the full width */
     }
+
     .login .login_form button:hover {
         background-color: #6A4BFF;
     }
+
     .donthave {
         margin-top: 20px;
         font-size: 12px;
         color: #918f8f;
         text-align: center;
     }
+
     .forgotpass {
         margin-top: 20px;
         font-size: 12px;
@@ -167,21 +202,25 @@
         justify-content: flex-start;
 
     }
+
     .login .login_image {
         display: none;
     }
+
     .login .login_form .logo {
         width: 150px;
         height: 30px;
     }
+
     .login .login_form button {
         padding: 10px 20%;
     }
+
     .login .login_form_social_icons img {
         padding: 10px 20px;
     }
 
-    
+
 
 
 }
